# project

./: .clang-format  CMakeLists.txt  ToDo.md
[ package ] algorithms/: CMakeLists.txt
[ package ] algorithms/[ component ] core/: CMakeLists.txt
[ package ] algorithms/[ component ] core/include/: report.h  subscription.h  subscriptions.h
[ package ] algorithms/[ component ] core/src/: subscription.cpp
[ package ] algorithms/[ component ] simplification/: CMakeLists.txt
[ package ] algorithms/[ component ] simplification/include/: simplification.h  simplificationinfo.h
[ package ] algorithms/[ component ] simplification/src/: simplificationinfo.cpp
algorithm.callback/: CMakeLists.txt
algorithm.callback/include/: callback.h
algorithm.core/: CMakeLists.txt
algorithm.core/include/: algorithm.h
algorithm.simplification/: CMakeLists.txt
algorithm.simplification/include/: simplification.h  simplificationstatus.h
algorithm.simplification/src/: simplification.cpp  simplificationstatus.cpp
algorithm.smoothing/: CMakeLists.txt
algorithm.smoothing/include/: smoothing.h  smoothingstatus.h
algorithm.smoothing/src/: smoothing.cpp  smoothingstatus.cpp
algorithms/: CMakeLists.txt
algorithms/algorithms.core/: CMakeLists.txt
algorithms/algorithms.core/include/: callback.h  report.h  subscription.h  subscriptions.h
algorithms/algorithms.core/src/: subscriptions.cpp
algorithms/algorithms.simplification/: CMakeLists.txt
algorithms/algorithms.simplification/include/: simplification.h  simplificationinfo.h
algorithms/algorithms.simplification/src/: simplification.cpp
algorithms/algorithms.smoothing/: CMakeLists.txt
algorithms/algorithms.smoothing/include/: smoothing.h  smoothinginfo.h
algorithms/algorithms.smoothing/src/: smoothing.cpp  smoothinginfo.cpp
applications/: CMakeLists.txt
applications/applications.core/: CMakeLists.txt
applications/applications.core/include/: progressdialog.h  totext.h  translation_context.h  unicodestring.h
applications/applications.core/src/: progressdialog.cpp  totext.cpp  translation_context.cpp  unicodestring.cpp
gui.progressdialog/: CMakeLists.txt
gui.progressdialog/include/: progressdialog.h
gui.totext/: CMakeLists.txt
gui.totext/include/: progressdialog.h  totext.h  translation_context.h  translationcontext.h
gui.totext/src/: progressdialog.cpp  totext.cpp  translation_context.cpp  translationcontext.cpp
main/: CMakeLists.txt
main/include/: redux.h
main/include/redux/: eventloop.h  reducer.h  store.h
main/include/redux/detail/: get.h  overloaded.h
main/src/: eventloop.h  main.cpp  reducer.h  store.h
service.core/: CMakeLists.txt
service.core/include/: cancellation.h  subscription.h  subscriptions.h
service.core/src/: cancellation.cpp  subscription.cpp
