cmake_minimum_required (VERSION 3.11)

project (project LANGUAGES CXX)

add_subdirectory ("main")
# add_subdirectory ("service.core")
# add_subdirectory ("algorithm.core")
# add_subdirectory ("algorithm.callback")
# add_subdirectory ("algorithm.simplification")
# add_subdirectory ("algorithm.smoothing")
# add_subdirectory ("gui.totext")
# add_subdirectory ("gui.progressdialog")
